$Id: ChangeLog,v 1.288 2005/12/06 23:21:16 hwmaier Exp $

2005-10-19 Henrik Maier  <henrik@proconx.com>

        * arch/avr/dev/ivect09.c, arch/avr/dev/ivect11.c, arch/avr/dev/ivect15.c,
        arch/avr/dev/ivect24.c, arch/avr/dev/ivect25.c, arch/avr/dev/ivect26.c,
        arch/avr/dev/ivect27.c, arch/avr/dev/ivect28.c, arch/avr/dev/ivect29.c:
        Changes to make register and flag names compatible with AT90CAN128 MCU.


2005-12-02  Harald Kipp  <harald.kipp@egnite.de>

	* os/version.c: Release 4.0 scheduled.


2005-11-25  Harald Kipp  <harald.kipp@egnite.de>

	* app/Makeburn.arm-jom: Programming template for ARM using
	jtag-o-mat.


2005-11-24  Harald Kipp  <harald.kipp@egnite.de>

	* configure.ac: Linker flags -lm and -ldl needed by lualib are
	not automatically applied by configure. Checks added. This
	and the following two patches had been kindly contributed
	by Torben Mikael Hansen.

	* pro/wins.c: Function definition for toupper in conflicts
	with GCC 4.0.2. Changed u_char types to int.

	* tools/nutconf/appoptdlg.cpp, tools/nutconf/bldoptdlg.cpp,
	tools/nutconf/configitem.cpp, tools/nutconf/mainframe.cpp,
	tools/nutconf/nutconf.cpp, tools/nutconf/nutconfdoc.cpp,
	tools/nutconf/propertylist.cpp, tools/nutconf/settings.cpp,
	tools/nutconf/settingsdlg.cpp: wxWidget failed to built with
	unicode support, which results in a number of compile errors.
	Fixed.

	* arch/avr/dev/ace.c, arch/avr/dev/tlc16c550.c,
	include/dev/ace.h, include/dev/tlc16c550.h,
	nut/conf/arch/avr.nut: Added driver for external 16550 UART.
	Initially contributed by William Basser and later enhanced by
	Przemyslaw Rudy. Only available for ATmega128 and GCC.


2005-11-22  Harald Kipp  <harald.kipp@egnite.de>

	* app/httpd/httpserv.c, app/inetq/inetq.c,
	app/logtime/logtime.c, app/logtime/logtime.c,
	app/rs232d/rs232d.c, app/tcps/tcps.c, app/uart/uart.c:
	Replaced specific device names by generalized macros.

	* app/logtime/Makefile: Added missing library nutarch.
